--- a/style.css
+++ b/style.css
@@ -33,14 +33,27 @@ body{
 .card{
     background-color: lightblue;
     border: 1px solid black;
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
     display: flex;
-    flex: wrap;
+    flex-direction: column;
 }
 
-.card1 .child{
-    border: 1px solid black;
-    min-width: 70px;
-    min-height: 40px;
+.card .colors-div{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card .child{
+    /* border: 1px solid black; */
+    width: 4.35em;
+    height: 3.1em;
+}
+
+.footer-div{
+    background-color: white;
+    height: 3.1em;
+    padding: 1em;
+    display: flex;
+    justify-content: space-between;
 }
