fix some issues

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 }
 
 main{
-    background-color: lightpink;
+    /* background-color: lightpink; */
     display: flex;
     justify-content: center;
     align-content: center;
