--- a/Pages/PagesStyle.css
+++ b/Pages/PagesStyle.css
@@ -12,12 +12,11 @@ html,body{
 body{
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 nav{
     border: 1px solid black;
-    height: 3rem;
+    height: 5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,7 +37,7 @@ nav select{
 }
 
 main{
-    background-color: lightblue;
+    /* background-color: lightblue; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
