--- a/Pages/PagesStyle.css
+++ b/Pages/PagesStyle.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: cursive;
 }
 
 html,body{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 body{
@@ -16,7 +17,8 @@ body{
 
 nav{
     border: 1px solid black;
-    height: 5rem;
+    min-height: 45px;
+    width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -37,7 +39,9 @@ nav select{
 }
 
 main{
-    /* background-color: lightblue; */
+    background-color: lightblue;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -50,4 +54,38 @@ main{
     border: 1px solid black;
     /* flex: 1; */
     flex-basis: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
+
+.copy{
+   height: 80%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 1.3em;
+}
+
+.copy-span{
+    color: rgba(255, 255, 255, 0.8);
+    border: 3px solid white;
+    border-radius: 5px;
+    width: 60%;
+    height: 50%;
+    margin-top: 8%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.color-text{
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 1.4em;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+/* Media Query Starts From Here */
+
