fixed responsiveness for 4K screen

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 }
 
 main{
-    background-color: lightpink;
+    /* background-color: lightpink; */
     display: flex;
     justify-content: center;
     align-content: center;
@@ -66,10 +66,52 @@ main a{
 
 /* Media Query Starts From Here */
 
-/* @media (min-width:426) and (max-width: 768px){
+/* For 4K Screen */
+@media (min-width: 1441px ) and (max-width: 2560px){
 
+    main{
+        padding:90px;
+    }
 
-} */
+    .card{
+    background-color: white;
+    width: 560px;
+    height: 360px;
+    padding: 8px;
+}
+
+.card .child{
+    /* border: 1px solid black; */
+    width: 6.8em;
+    height: 4.5em;
+}
+
+.footer-div{
+   font-size: 1.5em;
+}
+
+}
+
+@media (min-width:769px) and (max-width: 1207px){
+
+    .card{
+    background-color: white;
+    width: 280px;
+    height: 200px;
+}
+
+    .card .child{
+    /* border: 1px solid black; */
+    width: 3.3em;
+    height: 2.5em;
+}
+
+.footer-div{
+   padding: 0.5em;
+}
+
+}
+
 
 /* For Mobile Devices */
 
